deployment/admin-service-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialmatch-admin-svc
  namespace: socialmatch
spec:
  selector:
    matchLabels:
      app: admin_service
  template:
    metadata:
      labels:
        app: admin_service
    spec:
      containers:
        - image: bibinzoz/socialmatch-admin-service:latest
          imagePullPolicy: Always
          name: social-match-admin-service-container
          ports:
            - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: socialmatch-admin-service
  namespace: socialmatch
spec:
  type: ClusterIP
  ports:
    - port: 8003
      targetPort: 50052
  selector:
    app: admin_service
