deployment/api-gateway-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialmatch-api-gateway
  namespace: socialmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socialmatch_api_gateway
  template:
    metadata:
      labels:
        app: socialmatch_api_gateway
    spec:
      containers:
        - name: socialmatch-api-gateway-container
          imagePullPolicy: Always
          image: bibinzoz/socialmatch-api-gateway:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: socialmatch-api-gateway
  namespace: socialmatch
spec:
  type: LoadBalancer
  ports:
    - targetPort: 3000
      port: 3000
  selector: 
    app: socialmatch_api_gateway
