deployment/chat-service-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialmatch-chat-svc
  namespace: socialmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat_service
  template:
    metadata:
      labels:
        app: chat_service
    spec:
      containers:
        - image: bibinzoz/socialmatch-chat-service:latest
          imagePullPolicy: Always
          name: social-match-chat-service-container
          ports:
            - containerPort: 50056
---
apiVersion: v1
kind: Service
metadata:
  name: socialmatch-chat-service
  namespace: socialmatch
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 50056
  selector:
    app: chat_service
