deployment/connections-service-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialmatch-connections-svc
  namespace: socialmatch
spec:
  selector:
    matchLabels:
      app: connections_service
  template:
    metadata:
      labels:
        app: connections_service
    spec:
      containers:
        - image: bibinzoz/socialmatch-connections-service:latest
          imagePullPolicy: Always
          name: social-match-connections-service-container
          ports:
            - containerPort: 50057
---
apiVersion: v1
kind: Service
metadata:
  name: socialmatch-connections-service
  namespace: socialmatch
spec:
  type: ClusterIP
  ports:
    - port: 8005
      targetPort: 50057
  selector:
    app: connections_service
