deployment/postgres-k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: socialmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: socialmatch-postgres
  namespace: socialmatch
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
