deployment/room-service-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialmatch-room-svc
  namespace: socialmatch
spec:
  selector:
    matchLabels:
      app: room_service
  template:
    metadata:
      labels:
        app: room_service
    spec:
      containers:
        - image: bibinzoz/socialmatch-room-service:latest
          imagePullPolicy: Always
          name: social-match-room-service-container
          ports:
            - containerPort: 50058
---
apiVersion: v1
kind: Service
metadata:
  name: socialmatch-room-service
  namespace: socialmatch
spec:
  type: ClusterIP
  ports:
    - port: 8004
      targetPort: 50058
  selector:
    app: room_service
