deployment/user-service-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialmatch-user-svc
  namespace: socialmatch
spec:
  selector:
    matchLabels:
      app: user_service
  template:
    metadata:
      labels:
        app: user_service
    spec:
      containers:
        - image: bibinzoz/socialmatch-user-service:latest
          imagePullPolicy: Always
          name: social-match-user-service-container
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: socialmatch-user-service
  namespace: socialmatch
spec:
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: 50051
  selector:
    app: user_service
